--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,40 +110,80 @@
             app:layout_constraintTop_toBottomOf="@id/proverb_list"
             app:layout_constraintStart_toStartOf="@id/guideline_left" />
 
-        <!-- 未開放バッジ -->
-        <ImageView
-            android:id="@+id/unopened_badge_1"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@string/unopened_badge_description"
-            android:src="@drawable/unopened_badge"
+        <!-- NestedScrollView -->
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="@id/listBackground"
+            app:layout_constraintBottom_toBottomOf="@id/listBackground"
             app:layout_constraintStart_toStartOf="@id/listBackground"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp" />
+            app:layout_constraintEnd_toEndOf="@id/listBackground">
 
-        <ImageView
-            android:id="@+id/unopened_badge_2"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@string/unopened_badge_description"
-            android:src="@drawable/unopened_badge"
-            app:layout_constraintTop_toTopOf="@id/listBackground"
-            app:layout_constraintStart_toEndOf="@id/unopened_badge_1"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp" />
+            <!-- 未開放バッジ -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/unopened_badge_3"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:contentDescription="@string/unopened_badge_description"
-            android:src="@drawable/unopened_badge"
-            app:layout_constraintTop_toTopOf="@id/listBackground"
-            app:layout_constraintStart_toEndOf="@id/unopened_badge_2"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
+                    <!-- 一行目 -->
+                    <ImageView
+                        android:id="@+id/unopened_badge_1"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:contentDescription="@string/unopened_badge_description"
+                        android:src="@drawable/unopened_badge"
+                        app:layout_constraintTop_toTopOf="@id/listBackground"
+                        app:layout_constraintStart_toStartOf="@id/listBackground"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp" />
+
+                    <ImageView
+                        android:id="@+id/unopened_badge_2"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:contentDescription="@string/unopened_badge_description"
+                        android:src="@drawable/unopened_badge"
+                        app:layout_constraintTop_toTopOf="@id/listBackground"
+                        app:layout_constraintStart_toEndOf="@id/unopened_badge_1"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp" />
+
+                    <ImageView
+                        android:id="@+id/unopened_badge_3"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:contentDescription="@string/unopened_badge_description"
+                        android:src="@drawable/unopened_badge"
+                        app:layout_constraintTop_toTopOf="@id/listBackground"
+                        app:layout_constraintStart_toEndOf="@id/unopened_badge_2"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp" />
+                </LinearLayout>
+
+                <!-- ２行目 -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/unopened_badge_4"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:contentDescription="@string/unopened_badge_description"
+                        android:src="@drawable/unopened_badge"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp" />
+
+                    <!-- 必要に応じて追加のバッジを配置 -->
+                </LinearLayout>
+
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </ScrollView>
