--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,7 @@
             app:layout_constraintStart_toStartOf="@id/cloudBackground"
             app:layout_constraintEnd_toEndOf="@id/cloudBackground" />
 
+        <!-- 質問は2択3問 -> 最低限8つの格言 -->
         <Button
             android:id="@+id/get_button"
             android:layout_width="320dp"
