--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,6 +77,38 @@
             app:layout_constraintStart_toStartOf="@id/cloudBackground"
             app:layout_constraintEnd_toEndOf="@id/cloudBackground" />
 
+        <LinearLayout
+            android:layout_width="320dp"
+            android:layout_height="200dp"
+            android:orientation="vertical"
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="@id/cloudBackground"
+            app:layout_constraintBottom_toBottomOf="@id/cloudBackground"
+            app:layout_constraintStart_toStartOf="@id/cloudBackground"
+            app:layout_constraintEnd_toEndOf="@id/cloudBackground">
+
+            <TextView
+                android:id="@+id/today_proverb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_marginTop="20dp"/>
+
+            <TextView
+                android:id="@+id/today_proverb_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="10dp"
+                android:layout_gravity="end" />
+
+        </LinearLayout>
+
         <!-- 質問は2択3問 -> 最低限8つの格言 -->
         <Button
             android:id="@+id/get_button"
