--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -75,8 +75,7 @@
                 android:text="@string/buttonYes"
                 android:backgroundTint="@color/lightOrange"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:layout_marginStart="40dp"/>
+                android:textSize="18sp" />
 
             <Button
                 android:id="@+id/buttonNo"
@@ -85,8 +84,7 @@
                 android:text="@string/buttonNo"
                 android:backgroundTint="@color/lightOrange"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:layout_marginStart="20dp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
     </LinearLayout>
