--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -14,6 +14,22 @@
         android:padding="16dp">
 
         <TextView
+            android:id="@+id/close_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:contentDescription="@string/popup_close_description"
+            android:text="×"
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:layout_gravity="end"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"> <!-- 中央に配置 -->
+
+        <TextView
             android:id="@+id/questionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,6 +37,7 @@
             android:textSize="18sp"
             android:textColor="@android:color/black"
             android:layout_marginBottom="16dp"/>
+    </LinearLayout>
 
         <TextView
             android:id="@+id/quoteTextView"
@@ -41,20 +58,10 @@
             android:layout_gravity="end"
             android:visibility="gone" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/close_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/popup_close_text"
-                android:backgroundTint="@color/lightOrange"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:layout_gravity="end"/>
+            android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/close_button_final"
@@ -64,28 +71,42 @@
                 android:backgroundTint="@color/lightOrange"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-                android:layout_weight="1"
                 android:gravity="center"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-            <Button
-                android:id="@+id/buttonYes"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/buttonYes"
-                android:backgroundTint="@color/lightOrange"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                android:orientation="horizontal"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@id/close_button_final"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"> <!-- 中央に配置 -->
 
-            <Button
-                android:id="@+id/buttonNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/buttonNo"
-                android:backgroundTint="@color/lightOrange"
-                android:textColor="@android:color/black"
-                android:textSize="18sp" />
+                <Button
+                    android:id="@+id/buttonNo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buttonNo"
+                    android:backgroundTint="@color/lightOrange"
+                    android:textColor="@android:color/black"
+                    android:layout_marginEnd="20dp"
+                    android:textSize="18sp" />
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/buttonYes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buttonYes"
+                    android:backgroundTint="@color/lightOrange"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
