--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -17,8 +17,7 @@
             android:id="@+id/close_button"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:contentDescription="@string/popup_close_description"
-            android:text="×"
+            android:text="@string/popup_close_button"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:layout_gravity="end"/>
