--- a/app/src/main/res/layout/badge_popup.xml
+++ b/app/src/main/res/layout/badge_popup.xml
@@ -53,8 +53,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"/>
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
