--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/no_proverb_yet"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="@android:color/black"
             app:layout_constraintTop_toTopOf="@id/cloudBackground"
             app:layout_constraintBottom_toBottomOf="@id/cloudBackground"
@@ -81,7 +81,9 @@
             android:layout_width="320dp"
             android:layout_height="200dp"
             android:orientation="vertical"
-            android:padding="20dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="5dp"
+            android:paddingStart="5dp"
             app:layout_constraintTop_toTopOf="@id/cloudBackground"
             app:layout_constraintBottom_toBottomOf="@id/cloudBackground"
             app:layout_constraintStart_toStartOf="@id/cloudBackground"
@@ -92,7 +94,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="20sp"
+                android:textSize="16sp"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"/>
 
