--- a/app/src/main/res/layout/badge_popup.xml
+++ b/app/src/main/res/layout/badge_popup.xml
@@ -44,7 +44,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/black"/>
         </LinearLayout>
 
 
@@ -54,6 +55,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="16sp"
+            android:textColor="@color/black"
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:layout_gravity="center"/>
@@ -70,14 +72,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
-                android:text="@string/popup_proverb_get_day" />
+                android:text="@string/popup_proverb_get_day"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/popup_get_day"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textColor="@color/black"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -91,14 +95,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/popup_proverb_count"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/popup_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/black"/>
 
         </LinearLayout>
     </LinearLayout>
